bring it on the version from r3Fuze

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-To use simply place down an ironblock and a chest behind it, then right click it and you will have access to the fridge!
+You can put stuff into fridges and anvils you can repair tools with!
